PECOBLR-1121 Tests to validate Arrow patch across JVM versions.
Added tests to validate Arrow patch code paths. Added Maven profiles
to validate the behaviour across JVM versions and with/without
"--add-opens=java.base/java.nio=ALL-UNNAMED" JVM arguments.

By default, JVM version 11 is assumed. To use other JVM versions,
the toolchain needs to be setup to point to the correct Java versions
on the local machine in .m2/toolchains.xml.